--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@ layout: default
 
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
+    {% include footer.html %}
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
