--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
         <p>&copy; {{site.time | date: '%Y'}} {{siie.title}}. All rights reserved. </p>
         <nav>
-            {% for link in data.footer.links %}
-                <a href="{{link.url | relative_url}}">{{link.title}}</a>
+            {% for link in site.data.footer.links %}
+                <a href="{{link.url}}">{{link.title}}</a>
             {% endfor %}
         </nav>
 </footer>
