--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
 <body>
-  <nav>
-    <a href="/" {% if page.url == '/' %}style="color: red;"{% endif %}>Home</a>
-    <a href="/devotional/" {% if page.url == '/devotional/' %}style="color: red;"{% endif %}>Devotional</a>
-    <a href="/notes/" {% if page.url == '/notes/' %}style="color: red;"{% endif %}>Class Notes</a>
-    <a href="/class_recordings/" {% if page.url == '/class_recordings/' %}style="color: red;"{% endif %}>Class Recordings</a>
-    <a href="/about/" {% if page.url == '/about/' %}style="color: red;"{% endif %}>About</a>
-  </nav>
+<nav>
+  <a href="/" {% if page.url == '/' %}style="color: red;"{% endif %}>Home</a>
+  <a href="/devotional.html" {% if page.url == '/devotional.html' %}style="color: red;"{% endif %}>Devotional</a>
+  <a href="/notes.html" {% if page.url == '/notes.html' %}style="color: red;"{% endif %}>Class Notes</a>
+  <a href="/class_recordings.html" {% if page.url == '/class_recordings.html' %}style="color: red;"{% endif %}>Class Recordings</a>
+  <a href="/about.html" {% if page.url == '/about.html' %}style="color: red;"{% endif %}>About</a>
+</nav>
   
   <div class="content">
     {{ content }}
