--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <a href="/devotional.html" {% if page.url == '/devotional.html' %}style="color: red;"{% endif %}>Devotional</a>
   <a href="/notes.html" {% if page.url == '/notes.html' %}style="color: red;"{% endif %}>Class Notes</a>
   <a href="/class_recordings.html" {% if page.url == '/class_recordings.html' %}style="color: red;"{% endif %}>Class Recordings</a>
-  <a href="/about.html" {% if page.url == '/about.html' %}style="color: red;"{% endif %}>About</a>
+  <a href="/about.md" {% if page.url == '/about.md' %}style="color: red;"{% endif %}>About</a>
 </nav>
   
   <div class="content">
