--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
     {{ content }}
   </div>
 
+{% include social-share.html %}
+
   <!-- Dark mode toggle button (optional) -->
   <button class="dark-mode-toggle">🌓</button>
 
