--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,7 @@
 <nav>
+  <a href="{{ '/' | relative_url }}" class="logo-link">
+    <img src="{{ '/images/logo.svg' | relative_url }}" alt="Esteeb.com" class="site-logo">
+  </a>
   <div class="menu-toggle">
     <div class="bar"></div>
     <div class="bar"></div>
