update light mode to just be dark mode

--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,17 @@
   --primary-color: #046810;
   --secondary-color: #1c2f00;
   --primary-accent: #d5bf00;
-  --background-light: #f5f5f5;
+  --background-light: #001b05;
   --background-dark: #001b05;
   --text-light: #333;
   --text-dark: #e5e7eb;
-  --card-light: #fff;
+  --card-light: #462e07;
   --card-dark: #462e07;
-  --border-light: #ddd;
+  --border-light: #462e07;
   --border-dark: #462e07;
   --meta-light: #777;
   --meta-dark: #9ca3af;
-  --heading-light: #c7ad19;
+  --heading-light: #f6f6f3;
   --heading-dark: #f6f6f3;
   --shadow-light: 0 2px 5px rgba(0, 0, 0, 0.1);
   --shadow-dark: 0 2px 5px rgba(0, 0, 0, 0.2);
