--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
   --primary-accent: #d5bf00;
   --background-light: #001b05;
   --background-dark: #001b05;
-  --text-light: #333;
-  --text-dark: #e5e7eb;
+  --text-light: #ffffff;
+  --text-dark: #ffffff;
   --card-light: #462e07;
   --card-dark: #462e07;
   --border-light: #462e07;
